# politigraph-automation

./: .gitignore  LICENSE  README.md
.github/workflows/: crop_and_update_images.yml  list_drive_files_with_workload_fed.yml  scrap_and_ocr_votes.yml  scrape_and_ocr_votes.yml  scrape_and_update_bills.yml  scrape_and_update_bills_bi-weekly.yml
politigraph-bills-scraper/: pyproject.toml
politigraph-bills-scraper/src/lis_bills_scraper/: __init__.py  bill_cleanup.py  bill_event_scraper.py  bill_events_scraper.py  bill_events_updater.py  bill_scraper.py  bills_creator.py  bills_data_updater.py  bills_scraper.py  create_param_generators.py  event_scapers.py  instructor_manager.py  lis_web_constants.py  msbis_scraper.py  update_param_generators.py  utility.py
politigraph-membership-validator/: pyproject.toml
politigraph-membership-validator/mermbership-scraper/: pyproject.toml
politigraph-membership-validator/mermbership-scraper/src/hris_scraper/: __init__.py  membership_data_scraper.py  party_scraper.py
politigraph-membership-validator/src/membership_validator/: __init__.py  name_normalizer.py  representatives_validator.py
politigraph-merge-bill-detector/: pyproject.toml
politigraph-merge-bill-detector/src/merge_bill_updater/: __init__.py  appoint_committee_event_detector.py  main_bill_detector.py
politigraph-name-normalizer/: pyproject.toml
politigraph-name-normalizer/src/thai_name_normalizer/: __init__.py  name_normalizer.py  text_normalizer.py  thai_name_prefixes.py
politigraph-ocr-votes-log/: pyproject.toml
politigraph-ocr-votes-log/politigraph-votes-log-extractor/: pyproject.toml
politigraph-ocr-votes-log/politigraph-votes-log-extractor/src/politigraph_votes_extractor/: __init__.py  bbox_helper.py  df_cleaner.py  extra_votes_extractor.py  image_processing.py  pdf_converter.py  politigraph_data_loader.py  table_detector.py  table_extractor.py  typo_cleaner.py  validate_data_extractor.py  votes_extractor.py
politigraph-ocr-votes-log/src/ocr_votes_doc/: __init__.py  data_helper.py  ocr_and_update.py  poliquery_helper.py  validate_votes.py
politigraph-poliquery/: pyproject.toml
politigraph-poliquery/src/poliquery/: __init__.py  apollo_connector.py  bill_events_handler.py  bills_handler.py  gql_querry_helper.py  images.py  membership_handler.py  parliament_handler.py  political_party_handler.py  politician_handler.py  vote_events.py  vote_events_handler.py  vote_log.py  votes_handler.py  votings.py
politigraph-poliquery/src/poliquery/query_helper/: bill_vote_event.py  bills.py  draft_vote_event.py  enact_event.py  enforce_event.py  memberships.py  merge_event.py  organizations.py  persons.py  posts.py  reject_event.py  royal_assent_event.py  schema.py  vote_events.py  votes.py
politigraph_vote_events_scraper/: pyproject.toml
politigraph_vote_events_scraper/src/msbis_vote_events_scraper/: __init__.py  msbis_web_scraper.py  text_helper.py  vote_events_extractor.py
scripts/: crop_and_update_images.py  image_files_manager.py  list_drive_files.py  ocr_and_add_votes.py  scrap_vote_events.py  scrape_bills.py  scrape_vote_events.py  update_merge_events.py  update_party_image.py  update_politician_image.py
