[project]
name = "lis_bills_scraper"
version = "0.1.1"
dependencies = [
    'requests', "beautifulsoup4", "lxml",
    'pandas', 'thai_name_normalizer', "msbis-vote-events-scraper"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true