[project]
name = "merge_bill_updater"
version = "0.1.0"
dependencies = [
    "requests", "beautifulsoup4", "lxml", "thai_name_normalizer", "poliquery"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true