[project]
name = "ocr_votes_doc"
version = "0.1.0"
dependencies = [
    "politigraph_votes_extractor",
    "poliquery",
    "aiohttp", "python-dotenv"
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true