[project]
name = "poliquery"
version = "0.3.1"
dependencies = [
    'pandas>=2.1.1', 'python-dotenv',
    'gql==3.5.0', 'aiohttp', 'requests', 
    'cachetools==6.1.0', 'aiocache==0.12.3'
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true