[project]
name = "msbis_vote_events_scraper"
version = "0.1.0"
dependencies = [
    "requests",
    "poliquery", "beautifulsoup4", "lxml",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true