[project]
name = "politigraph_votes_extractor"
version = "0.1.0"
dependencies = [
    "requests", "pandas", "numpy", 
    "opencv_python", "pdf2image", "Pillow", 'thai_name_normalizer',
    "rapidfuzz==3.14.1",
    "easyocr", "poliquery", "gql==3.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true